<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="status_image_description">this is a drawable image that can tell you if the asteroid is potentially dangerous or not</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="day_image_description">Image of the day, this is downloaded each day in the nasa website</string>
    <string name="asteroid_image_description">This is the image of the day, download from nasa website.</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="help_button_description">Help button, it can give you some information some information. Please click on to know more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>